--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -6,12 +6,15 @@
     "node": ">= 10.13 <11"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.8",
     "@types/ramda": "^0.26.8",
+    "@types/strip-ansi": "^5.2.1",
     "jest": "~24.7.1",
     "prettier": "1.17.0",
     "rimraf": "^2.6.3",
+    "strip-ansi": "^5.2.0",
     "ts-jest": "~24.0.2",
     "tslint": "~5.16.0",
     "tslint-config-prettier": "1.18.0",
@@ -30,6 +33,7 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "chalk": "^2.4.2",
     "ramda": "^0.26.1",
     "tslib": "~1.9.3"
   }
