--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -9,13 +9,13 @@
     "build:watch": "tsc -w -p tsconfig.release.json",
     "clean": "rimraf coverage build tmp",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "test": "jest --coverage",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "ramda": "^0.26.1",
-    "tslib": "~1.9.3"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
