--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -21,7 +21,7 @@
     "@types/chalk": "^2.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.8",
-    "@types/ramda": "^0.26.8",
+    "@types/ramda": "types/npm-ramda#dist",
     "@types/strip-ansi": "^5.2.1",
     "expect-more-jest": "^2.4.1",
     "husky": "^2.1.0",
