Fix linting test files

--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -9,6 +9,7 @@
     "build:watch": "tsc -w -p tsconfig.release.json",
     "clean": "rimraf coverage build tmp",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
+    "lint:test": "yarn lint -c tslint.test.json",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch"
