--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "chance": "^1.0.18",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/chance": "^1.0.2",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.8",
     "@types/ramda": "types/npm-ramda#dist",
