--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -15,6 +15,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "alphanum-sort": "^1.0.2",
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
     "ramda": "^0.26.1"
