--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "alphanum-sort": "^1.0.2",
+    "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
     "@types/jest": "^24.0.11",
