--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -34,6 +34,7 @@
     "jest": "^24.7.1",
     "jest-extended": "^0.11.1",
     "jest-watch-suspend": "^1.1.1",
+    "jest-watch-toggle-config": "^1.0.2",
     "jest-watch-typeahead": "^0.3.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0",
