--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -19,7 +19,8 @@
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "utility-types": "^3.6.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
