--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -20,6 +20,7 @@
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
     "ramda": "^0.26.1",
+    "ramda-adjunct": "^2.17.0",
     "utility-types": "^3.6.1"
   },
   "devDependencies": {
