--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -35,6 +35,7 @@
     "expect-more-jest": "^2.4.1",
     "husky": "^2.2.0",
     "jest": "^24.8.0",
+    "jest-circus": "^24.8.0",
     "jest-extended": "^0.11.1",
     "jest-watch-suspend": "^1.1.1",
     "jest-watch-toggle-config": "^1.0.2",
