--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -28,7 +28,7 @@
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
     "@types/jest": "^24.0.12",
-    "@types/node": "^12.0.0",
+    "@types/node": "10",
     "@types/ramda": "types/npm-ramda#dist",
     "@types/strip-ansi": "^5.2.1",
     "depcheck": "^0.7.2",
