--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -19,6 +19,7 @@
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
+    "minimist": "^1.2.0",
     "ramda": "^0.26.1",
     "ramda-adjunct": "^2.17.0",
     "utility-types": "^3.6.1"
@@ -28,6 +29,7 @@
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
     "@types/jest": "^24.0.12",
+    "@types/minimist": "^1.2.0",
     "@types/node": "10",
     "@types/ramda": "types/npm-ramda#dist",
     "@types/strip-ansi": "^5.2.1",
