Make a graph from rooms

--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -19,21 +19,25 @@
     "chai": "^4.2.0",
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
+    "common-tags": "^1.8.0",
     "minimist": "^1.2.0",
     "ramda": "^0.26.1",
     "ramda-adjunct": "^2.17.0",
     "strip-ansi": "^5.2.0",
-    "utility-types": "^3.6.1"
+    "utility-types": "^3.6.1",
+    "yaml": "^1.5.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
+    "@types/common-tags": "^1.8.0",
     "@types/jest": "^24.0.12",
     "@types/minimist": "^1.2.0",
     "@types/node": "10",
     "@types/ramda": "types/npm-ramda#dist",
     "@types/strip-ansi": "^5.2.1",
+    "@types/yaml": "^1.0.2",
     "depcheck": "^0.7.2",
     "expect-more-jest": "^2.4.1",
     "husky": "^2.2.0",
