--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-typescript-boilerplate",
+  "name": "node-map-gen",
   "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
   "license": "Apache-2.0",
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
