--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -20,6 +20,7 @@
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
     "common-tags": "^1.8.0",
+    "express": "^4.16.4",
     "minimist": "^1.2.0",
     "ramda": "^0.26.1",
     "ramda-adjunct": "^2.17.0",
@@ -32,6 +33,7 @@
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
     "@types/common-tags": "^1.8.0",
+    "@types/express": "^4.16.1",
     "@types/jest": "^24.0.12",
     "@types/minimist": "^1.2.0",
     "@types/node": "10",
@@ -53,6 +55,7 @@
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-microsoft-contrib": "~6.1.1",
