--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -9,21 +9,27 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/debug": "^4.1.2",
-    "@types/jest": "^24.0.11",
-    "config-presets": "^1.1.5",
+    "@types/debug": "^4.1.4",
+    "@types/jest": "^24.0.12",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
+    "config-presets": "^1.1.16",
     "debug": "^4.1.1",
-    "husky": "^1.3.1",
-    "jest": "^24.5.0",
-    "lint-staged": "^8.1.5",
+    "husky": "^2.2.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^8.1.6",
     "parcel": "^1.12.3",
     "parcel-plugin-typescript": "^1.0.0",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "prettier-package-json": "^2.1.0",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.14.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
