--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "husky": "^2.2.0",
     "lerna": "^3.13.4"
   },
   "workspaces": {
