--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "node-map-gen",
   "private": true,
+  "name": "node-map-gen",
   "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
   "license": "Apache-2.0",
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "version": "0.0.0",
   "scripts": {
+    "pre-commit": "pretty-quick --write && lint-staged",
+    "pre-push": "(yarn lint & tsc --noEmit) && jest --ci",
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "check-deps": "depcheck --skip-missing --ignore-bin-package --ignores $(cat .depcheckignore) || true",
@@ -43,7 +45,6 @@
     "@types/yaml": "^1.0.2",
     "depcheck": "^0.7.2",
     "expect-more-jest": "^2.4.1",
-    "husky": "^2.2.0",
     "jest": "^24.8.0",
     "jest-circus": "^24.8.0",
     "jest-extended": "^0.11.1",
