--- a/projects/node-map-gen/tsconfig.json
+++ b/projects/node-map-gen/tsconfig.json
@@ -6,6 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "importHelpers": true,
+    "isolatedModules": true,
     "jsx": "react",
     "alwaysStrict": true,
     "sourceMap": true,
