--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -1,11 +1,10 @@
 {
   "name": "web-app",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "serve": "parcel serve src/index.html",
-    "build": "parcel build src/index.html",
+    "serve": "webpack-dev-server",
+    "build": "webpack",
     "pre-commit": "pretty-quick --write && lint-staged",
     "pre-push": "(yarn lint & tsc --noEmit) && jest --ci"
   },
@@ -16,21 +15,27 @@
     "@types/jest": "^24.0.12",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^2.0.2",
     "config-presets": "^1.1.16",
     "debug": "^4.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.6",
-    "parcel": "^1.12.3",
-    "parcel-plugin-typescript": "^1.0.0",
     "prettier": "^1.17.0",
     "prettier-package-json": "^2.1.0",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
