Refactoring a lot, more tests, fixes

--- a/projects/node-map-gen/tsconfig.spec.json
+++ b/projects/node-map-gen/tsconfig.spec.json
@@ -1,7 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["jest-extended"]
+    "types": ["jest-extended"],
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["./src/*"]
+    }
   },
   "include": ["__tests__/**/*"],
   "exclude": ["node_modules", "src/**/*"]
