--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -35,8 +35,14 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.26",
+    "@types/cors": "^2.8.5",
+    "@types/styled-components": "^4.1.14",
     "axios": "^0.18.0",
+    "bluebird": "^3.5.4",
+    "cors": "^2.8.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.0"
   }
 }
