map-gen: move tconfig.paths to normal config

--- a/projects/node-map-gen/tsconfig.spec.json
+++ b/projects/node-map-gen/tsconfig.spec.json
@@ -1,11 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["jest-extended"],
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": ["./src/*"]
-    }
+    "types": ["jest-extended"]
   },
   "include": ["__tests__/**/*"],
   "exclude": ["node_modules", "src/**/*"]
