webapp: nohoist all deps for now

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   },
   "workspaces": {
     "nohoist": [
-      "web-app/typescript",
-      "web-app/react*/**",
-      "web-app/*-loader",
+      "web-app/**",
       "**/@types/*"
     ],
     "packages": [
