--- a/projects/node-map-gen/package.json
+++ b/projects/node-map-gen/package.json
@@ -21,6 +21,7 @@
     "chalk": "^2.4.2",
     "chance": "^1.0.18",
     "common-tags": "^1.8.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "minimist": "^1.2.0",
     "ramda": "^0.26.1",
@@ -35,6 +36,7 @@
     "@types/chalk": "^2.2.0",
     "@types/chance": "^1.0.2",
     "@types/common-tags": "^1.8.0",
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.12",
     "@types/minimist": "^1.2.0",
