--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "serve": "webpack-dev-server",
+    "serve": "nodemon -w webpack.config.js --exec 'yarn webpack-dev-server'",
     "build": "webpack",
-    "pre-commit": "pretty-quick --write && lint-staged",
+    "lint": "tslint -p tsconfig.json -t stylish",
+    "pre-commit": "pretty-quick --staged && lint-staged",
     "pre-push": "(yarn lint & tsc --noEmit) && jest --ci"
   },
   "private": true,
