--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "lint": "tslint -p tsconfig.json -t stylish",
     "pre-commit": "pretty-quick --staged && lint-staged",
-    "pre-push": "(yarn lint & tsc --noEmit) && jest --ci"
+    "pre-push": "(yarn lint & tsc --noEmit) && jest --ci --coverage"
   },
   "private": true,
   "license": "MIT",
