--- a/projects/web-app/package.json
+++ b/projects/web-app/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
+    "@types/bluebird": "^3.5.26",
     "@types/debug": "^4.1.4",
     "@types/jest": "^24.0.12",
     "@types/ramda": "types/npm-ramda#dist",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/styled-components": "^4.1.15",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^2.0.2",
@@ -28,6 +30,7 @@
     "lint-staged": "^8.1.6",
     "prettier": "^1.17.0",
     "prettier-package-json": "^2.1.0",
+    "react-test-renderer": "^16.8.6",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^24.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
@@ -37,8 +40,7 @@
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
-    "@types/bluebird": "^3.5.26"
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
